K8S/Manifests/ingress-agic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    #cert-manager.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - aksapp1.cloud5.tk
      secretName: aksapp1
  rules:
  - host: aksapp1.cloud5.tk
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: aspnetapp
            port:
              number: 80
