K8S/Manifests/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goncalvesj-aks-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - m3u-split.jpcloud.tk
      secretName: m3u-split-cert
  rules:
    - host: m3u-split.jpcloud.tk
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: m3u-split
                port:
                  number: 80
